tests/int/use_command/snapshots/integration__int__use_command__flags__modules_mixed_flags_r_e_grouped.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - mixed
    - "-r"
    - "-e"
    - "--grouped"
---
success: true
exit_code: 0
----- stdout -----
mixed
mixed::file_child
 - crate::custom_path::greet
 - crate::mixed::greet
mixed::inline_child
 - crate::mixed::file_child::greet

----- stderr -----
