tests/int/use_command/snapshots/integration__int__use_command__flags__modules_mixed_flags_r_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - mixed
    - "-r"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::custom_path::greet
crate::mixed::file_child::greet
crate::mixed::greet

----- stderr -----
