tests/int/use_command/snapshots/integration__int__use_command__flags__modules_mixed_flags_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - mixed
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
